<resources>
    <string name="app_name">DroidCafe</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="button_date">Date</string>
    <string name="date_picker">datePicker</string>

    <string name="intro_text">Droid Desserts</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_description">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt.</string>
    <string name="order_text">Order</string>

    <string name="label_name">Name</string>
    <string name="hint_edt_name">Enter yout name</string>
    <string name="label_address">Address</string>
    <string name="hint_edt_address">Enter your address</string>
    <string name="label_phone">Phone</string>
    <string name="hint_edt_phone">Enter your phone</string>
    <string name="label_note">Note</string>
    <string name="hint_edt_note">Enter note</string>

    <string name="label_delivery">Choose a delivery method:</string>
    <string name="samday_label">Same day messenger service</string>
    <string name="nextday_label">Next day ground delivery</string>
    <string name="pickup_label">Pick up</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
